--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.17.0
   google_maps_flutter: ^2.1.1
   logging: 1.0.2
 
@@ -24,3 +27,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  generate: true
+
