--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,12 +10,16 @@ environment:
 
 
 dependencies:
+  firebase_auth: 3.3.7
+  firebase_core: ^1.12.0
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  intl: ^0.17.0
   google_maps_flutter: ^2.1.1
+  google_sign_in: 5.2.3
+  http: ^0.13.4
+  intl: ^0.17.0
   logging: 1.0.2
 
 
