--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -23,6 +23,7 @@ linter:
   # producing the lint.
   rules:
     avoid_print: false
+    avoid_renaming_method_parameters: false
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
